# 40_days_of_AI

./: .gitignore  plan.md  pyproject.toml
Agentic-RAG-PDF-Q&A/documentation/: agentic_rag_idea.md
Day_2_Running_LLMs_locally_Ollama/: ollama_test_with_phi3_mini.py
Perplexity_ai_search/: test_perplexit_ai_search.py
